Bug 894245 part 1 - Align windows widget behavior with other widgets to return failure when the specified color is unknown. r=jimm

MozReview-Commit-ID: HZ0Fir06QU6